$Id$

version ? Thor (??/??/????):

  - lms-payments: again tariff value can be less than zero (alec)
  - fixed customer name capitalization on contract (alec)
  - contrib/formularz_przelewu_wplaty_2: fixed problem with locale (alec)

version 1.6.0rc5 Thor (01/06/2005):

  - updated lib/ethercodes.txt file (alec)
  - Polish documentation last-version fix (alec)
  - server_encoding option last-version fix (alec)

version 1.6.0rc4 Thor (31/05/2005):

  - bugfix: don't hide compressed backups on backups list (alec)
  - bugfix: debtors counting in UserStats() for MySQL (alec)
  - icon invoice_pay.gif renamed to pay.gif (alec)
  - changed icon for standing payments accounting (alec)
  - BTS#0000360: ticket adding in customer context (alec)
  - bugfix: error handling while ticket addition (alec) 
  - bugfix: going to backup view by clicking on record on backups list (alec)
  - SQLite: fixed bugs in upgradedb files, added iconv() support (alec) 
  - SQLite: added sample/sqlite_createdb.php for creating database without
    need of any sqlite client applications (alec)
  - cashimportparser: added checking if value is numeric and character
    set conversion before import to temp table (alec)
  - some changes in documentation (alec/kondi)

version 1.6.0rc3 Thor (23/05/2005):

  - lms-notify: added option 'mailcharset' with default value 'UTF-8' (alec)
  - lms-notify: don't sends mail to deleted customers (alec)
  - lms-notify: don't stops on unknown/wrong recipient address (alec)
  - file sample/mailtemplate.txt converted to UTF-8 (alec)
  - language fixes in documentation (kondi)
  - bugfix: tickets searching by requestor name (alec)
  - bugfix: in quicksearch header() replaced by $SESSION->redirect() (alec)
  - bugfix: error with null netdev value while adding new node (alec)
  - BTS#0000353: in _smarty_function_sum() added checking if each iterated 
    row is an array (alec)
  - fixed discount displaying in customer assignments box (chilek)